plasma-lab-src/fr.inria.plasmalab.root/fr.inria.plasmalab.altl/src/main/java/fr/inria/plasmalab/altl/parser/ALTLParser.java
/**
 * This file is part of fr.inria.plasmalab.altl.
 *
 * fr.inria.plasmalab.altl is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Lesser General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * fr.inria.plasmalab.altl is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public License
 * along with fr.inria.plasmalab.altl.  If not, see <http://www.gnu.org/licenses/>.
 */
// $ANTLR 3.4 ALTL.g 2017-02-23 16:23:36

  package fr.inria.plasmalab.altl.parser;

  import java.util.HashMap;
  import java.util.Map;
  import java.util.List;
  import java.util.ArrayList;

  import fr.inria.plasmalab.altl.ast.Adaptive;
  import fr.inria.plasmalab.altl.ast.IdentExpr;
  import fr.inria.plasmalab.bltl.ast.*;
  import fr.inria.plasmalab.bltl.ast.nodes.*;
  import fr.inria.plasmalab.bltl.ast.leaves.*;
  import fr.inria.plasmalab.bltl.ast.leaves.FloatExpr;
  import fr.inria.plasmalab.bltl.ast.operators.*;
  import fr.inria.plasmalab.workflow.concrete.GenericIdentifier;
  import fr.inria.plasmalab.workflow.concrete.Variable;
  import fr.inria.plasmalab.workflow.concrete.VariableType;
  import fr.inria.plasmalab.workflow.concrete.Range;
  import fr.inria.plasmalab.workflow.data.simulation.InterfaceIdentifier;
  import fr.inria.plasmalab.workflow.concrete.GenericIdentifier;
  // Required and generated by FormulaRules.g
  import fr.inria.plasmalab.bltl.parser.BoundExpr;
  import fr.inria.plasmalab.workflow.exceptions.PlasmaDataException;
  import fr.inria.plasmalab.workflow.exceptions.PlasmaSyntaxException;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class ALTLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADD", "ALPHA", "AND", "BLTL", "COL", "COLEQ", "COMMA", "COMMENTS", "DEADLOCK", "DECLARE", "DIGITS", "DIV", "DOT", "DQ", "END", "EQ", "FALSE", "FATALLY", "FLOATING", "GE", "GLOBALLY", "GT", "ID", "IDENT", "IMP", "LB", "LC", "LE", "LP", "LT", "MIN", "MUL", "NEQ", "NEXT", "NOT", "OCCURS", "OPTIMIZE", "OR", "OVERRIDE", "QUOTE", "RB", "RC", "REWARD", "RP", "SEMI", "SH", "TRUE", "UNTIL", "WEAK", "WHITESPACE"
    };

    public static final int EOF=-1;
    public static final int ADD=4;
    public static final int ALPHA=5;
    public static final int AND=6;
    public static final int BLTL=7;
    public static final int COL=8;
    public static final int COLEQ=9;
    public static final int COMMA=10;
    public static final int COMMENTS=11;
    public static final int DEADLOCK=12;
    public static final int DECLARE=13;
    public static final int DIGITS=14;
    public static final int DIV=15;
    public static final int DOT=16;
    public static final int DQ=17;
    public static final int END=18;
    public static final int EQ=19;
    public static final int FALSE=20;
    public static final int FATALLY=21;
    public static final int FLOATING=22;
    public static final int GE=23;
    public static final int GLOBALLY=24;
    public static final int GT=25;
    public static final int ID=26;
    public static final int IDENT=27;
    public static final int IMP=28;
    public static final int LB=29;
    public static final int LC=30;
    public static final int LE=31;
    public static final int LP=32;
    public static final int LT=33;
    public static final int MIN=34;
    public static final int MUL=35;
    public static final int NEQ=36;
    public static final int NEXT=37;
    public static final int NOT=38;
    public static final int OCCURS=39;
    public static final int OPTIMIZE=40;
    public static final int OR=41;
    public static final int OVERRIDE=42;
    public static final int QUOTE=43;
    public static final int RB=44;
    public static final int RC=45;
    public static final int REWARD=46;
    public static final int RP=47;
    public static final int SEMI=48;
    public static final int SH=49;
    public static final int TRUE=50;
    public static final int UNTIL=51;
    public static final int WEAK=52;
    public static final int WHITESPACE=53;

    // delegates
    public ALTL_FormulaRules gFormulaRules;
    public Parser[] getDelegates() {
        return new Parser[] {gFormulaRules};
    }

    // delegators


    public ALTLParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public ALTLParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
        gFormulaRules = new ALTL_FormulaRules(input, state, this);
    }

    public String[] getTokenNames() { return ALTLParser.tokenNames; }
    public String getGrammarFileName() { return "ALTL.g"; }


        public static final String[] tokenNamesTranslated = new String[] {    
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "'+'", "upper and lower case alpha characters", "'&'", "'BLTL'", 
        "':'", "':='", "','", "COMMENTS", "'declare'", "DIGITS", "'/'", "'.'", "' \" '", "'end'", "'='", "'false'", 
        "'F'", "floating point number", "'>='", "'G'", "'>'", "an alpha-numerical identifier starting with a letter or '_'",
         "dot separated identifiers", "'=>'", "'['", 
        "'<='", "'('", "'<'", "'-'", "'*'", "'!='", "'X'", "'!'", "'==>'", "'optimize'", "'|'", "' ' '",
        "']'", "')'", "';'", "'#'", "'true'", "'U'", "'W'", "WHITESPACE"
      };

      private List<PlasmaDataException> errors = new ArrayList<PlasmaDataException>();
      public List<PlasmaDataException> getErrors() {
            return errors;
      }
      
           @Override
         protected Object recoverFromMismatchedToken (IntStream input,int 
    ttype,BitSet follow) throws RecognitionException{
             // Desactivate recover from Mismatched input
             throw new MismatchedTokenException (ttype, input);
         }

         @Override
         public void reportError (RecognitionException e){
             String hdr = getErrorHeader(e);
             String msg = getErrorMessage(e, this.tokenNames);
             PlasmaSyntaxException pse = new PlasmaSyntaxException(hdr+" - "+msg, e);
             errors.add(pse);
             // throw pse;
         }
         
         //Override error message
      @Override
      public String getErrorMessage(RecognitionException e, String[] tokenNames) {
        String msg = e.getMessage();
        if ( e instanceof UnwantedTokenException ) {
          UnwantedTokenException ute = (UnwantedTokenException)e;
          String tokenName;
          if ( ute.expecting== Token.EOF ) {
            tokenName = "EOF";
          }
          else {
            tokenName = tokenNamesTranslated[ute.expecting];
          }
          msg = "extraneous input "+getTokenErrorDisplay(ute.getUnexpectedToken())+
            " expecting "+tokenName;
        }
        else if ( e instanceof MissingTokenException ) {
          MissingTokenException mte = (MissingTokenException)e;
          String tokenName;
          if ( mte.expecting== Token.EOF ) {
            tokenName = "EOF";
          }
          else {
            tokenName = tokenNamesTranslated[mte.expecting];
          }
          msg = "missing "+tokenName+" at "+getTokenErrorDisplay(e.token);
        }
        else if ( e instanceof MismatchedTokenException ) {
          MismatchedTokenException mte = (MismatchedTokenException)e;
          String tokenName;
          if ( mte.expecting== Token.EOF ) {
            tokenName = "EOF";
          }
          else {
            tokenName = tokenNamesTranslated[mte.expecting];
          }
          msg = "mismatched input "+getTokenErrorDisplay(e.token)+
            " expecting "+tokenName;
        }
        else if ( e instanceof MismatchedTreeNodeException ) {
          MismatchedTreeNodeException mtne = (MismatchedTreeNodeException)e;
          String tokenName;
          if ( mtne.expecting==Token.EOF ) {
            tokenName = "EOF";
          }
          else {
            tokenName = tokenNamesTranslated[mtne.expecting];
          }
          msg = "mismatched tree node: "+mtne.node+
            " expecting "+tokenName;
        }
        else if ( e instanceof NoViableAltException ) {
          //NoViableAltException nvae = (NoViableAltException)e;
          // for development, can add "decision=<<"+nvae.grammarDecisionDescription+">>"
          // and "(decision="+nvae.decisionNumber+") and
          // "state "+nvae.stateNumber
          msg = "no viable alternative at input "+getTokenErrorDisplay(e.token);
        }
        else if ( e instanceof EarlyExitException ) {
          //EarlyExitException eee = (EarlyExitException)e;
          // for development, can add "(decision="+eee.decisionNumber+")"
          msg = "required (...)+ loop did not match anything at input "+
            getTokenErrorDisplay(e.token);
        }
        else if ( e instanceof MismatchedSetException ) {
          MismatchedSetException mse = (MismatchedSetException)e;
          msg = "mismatched input "+getTokenErrorDisplay(e.token)+
            " expecting set "+mse.expecting;
        }
        else if ( e instanceof MismatchedNotSetException ) {
          MismatchedNotSetException mse = (MismatchedNotSetException)e;
          msg = "mismatched input "+getTokenErrorDisplay(e.token)+
            " expecting set "+mse.expecting;
        }
        else if ( e instanceof FailedPredicateException ) {
          FailedPredicateException fpe = (FailedPredicateException)e;
          msg = "rule "+fpe.ruleName+" failed predicate: {"+
            fpe.predicateText+"}?";
        }
        return msg;
      }



    // $ANTLR start "factor"
    // ALTL.g:165:1: factor returns [Expr val] : ( MIN )? ( LP expr RP | (id1= IDENT | DQ id2= IDENT DQ ) ( QUOTE )? | number | TRUE | FALSE ) ;
    public final Expr factor() throws RecognitionException {
        Expr val = null;


        Token id1=null;
        Token id2=null;
        Expr expr1 =null;

        double number2 =0.0;


         UnOp neg = null; 
        try {
            // ALTL.g:166:3: ( ( MIN )? ( LP expr RP | (id1= IDENT | DQ id2= IDENT DQ ) ( QUOTE )? | number | TRUE | FALSE ) )
            // ALTL.g:166:3: ( MIN )? ( LP expr RP | (id1= IDENT | DQ id2= IDENT DQ ) ( QUOTE )? | number | TRUE | FALSE )
            {
            // ALTL.g:166:3: ( MIN )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==MIN) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // ALTL.g:166:4: MIN
                    {
                    match(input,MIN,FOLLOW_MIN_in_factor76); 

                     neg = UnOp.Neg; 

                    }
                    break;

            }


            // ALTL.g:167:10: ( LP expr RP | (id1= IDENT | DQ id2= IDENT DQ ) ( QUOTE )? | number | TRUE | FALSE )
            int alt4=5;
            switch ( input.LA(1) ) {
            case LP:
                {
                alt4=1;
                }
                break;
            case DQ:
            case IDENT:
                {
                alt4=2;
                }
                break;
            case DIGITS:
            case FLOATING:
                {
                alt4=3;
                }
                break;
            case TRUE:
                {
                alt4=4;
                }
                break;
            case FALSE:
                {
                alt4=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }

            switch (alt4) {
                case 1 :
                    // ALTL.g:167:12: LP expr RP
                    {
                    match(input,LP,FOLLOW_LP_in_factor120); 

                    pushFollow(FOLLOW_expr_in_factor122);
                    expr1=expr();

                    state._fsp--;


                    match(input,RP,FOLLOW_RP_in_factor124); 

                     val = expr1;

                    }
                    break;
                case 2 :
                    // ALTL.g:168:12: (id1= IDENT | DQ id2= IDENT DQ ) ( QUOTE )?
                    {
                    // ALTL.g:168:12: (id1= IDENT | DQ id2= IDENT DQ )
                    int alt2=2;
                    int LA2_0 = input.LA(1);

                    if ( (LA2_0==IDENT) ) {
                        alt2=1;
                    }
                    else if ( (LA2_0==DQ) ) {
                        alt2=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 2, 0, input);

                        throw nvae;

                    }
                    switch (alt2) {
                        case 1 :
                            // ALTL.g:168:14: id1= IDENT
                            {
                            id1=(Token)match(input,IDENT,FOLLOW_IDENT_in_factor157); 

                             val = new IdentExpr(/*gFormulaRules.modelIdMap.get*/((id1!=null?id1.getText():null))); 

                            }
                            break;
                        case 2 :
                            // ALTL.g:169:14: DQ id2= IDENT DQ
                            {
                            match(input,DQ,FOLLOW_DQ_in_factor191); 

                            id2=(Token)match(input,IDENT,FOLLOW_IDENT_in_factor195); 

                            match(input,DQ,FOLLOW_DQ_in_factor197); 

                             val = new IdentExpr(/*gFormulaRules.modelIdMap.get*/("\"" + (id2!=null?id2.getText():null) + "\"")); 

                            }
                            break;

                    }


                    // ALTL.g:171:19: ( QUOTE )?
                    int alt3=2;
                    int LA3_0 = input.LA(1);

                    if ( (LA3_0==QUOTE) ) {
                        alt3=1;
                    }
                    switch (alt3) {
                        case 1 :
                            // ALTL.g:171:20: QUOTE
                            {
                            match(input,QUOTE,FOLLOW_QUOTE_in_factor244); 

                             ((IdentExpr) val).prime = true; 

                            }
                            break;

                    }


                    }
                    break;
                case 3 :
                    // ALTL.g:173:12: number
                    {
                    pushFollow(FOLLOW_number_in_factor297);
                    number2=number();

                    state._fsp--;


                     val = new FloatExpr(number2);

                    }
                    break;
                case 4 :
                    // ALTL.g:174:12: TRUE
                    {
                    match(input,TRUE,FOLLOW_TRUE_in_factor330); 

                     val = new BoolExpr(true);  

                    }
                    break;
                case 5 :
                    // ALTL.g:175:12: FALSE
                    {
                    match(input,FALSE,FOLLOW_FALSE_in_factor365); 

                     val = new BoolExpr(false); 

                    }
                    break;

            }


             val = neg == null ? val : new Expr1(neg, val); 

            }

        }

            catch (RecognitionException re) {
                //displayRecognitionError(re);
                reportError(re);
                //recover(input,re);
                //throw re;
            }

        finally {
        	// do for sure before leaving
        }
        return val;
    }
    // $ANTLR end "factor"



    // $ANTLR start "formula"
    // ALTL.g:181:1: formula returns [Expr val] : ( ( declareVars )? ( optimizeVars )? END )? aexpr ;
    public final Expr formula() throws RecognitionException {
        Expr val = null;


        Expr aexpr3 =null;


         gFormulaRules.optimizationVariables = new ArrayList<Variable>(); 
                                             gFormulaRules.requirementVarMap = new HashMap<String,Variable>();
        try {
            // ALTL.g:183:5: ( ( ( declareVars )? ( optimizeVars )? END )? aexpr )
            // ALTL.g:183:5: ( ( declareVars )? ( optimizeVars )? END )? aexpr
            {
            // ALTL.g:183:5: ( ( declareVars )? ( optimizeVars )? END )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==DECLARE||LA7_0==END||LA7_0==OPTIMIZE) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // ALTL.g:183:6: ( declareVars )? ( optimizeVars )? END
                    {
                    // ALTL.g:183:6: ( declareVars )?
                    int alt5=2;
                    int LA5_0 = input.LA(1);

                    if ( (LA5_0==DECLARE) ) {
                        alt5=1;
                    }
                    switch (alt5) {
                        case 1 :
                            // ALTL.g:183:6: declareVars
                            {
                            pushFollow(FOLLOW_declareVars_in_formula455);
                            declareVars();

                            state._fsp--;


                            }
                            break;

                    }


                    // ALTL.g:183:19: ( optimizeVars )?
                    int alt6=2;
                    int LA6_0 = input.LA(1);

                    if ( (LA6_0==OPTIMIZE) ) {
                        alt6=1;
                    }
                    switch (alt6) {
                        case 1 :
                            // ALTL.g:183:19: optimizeVars
                            {
                            pushFollow(FOLLOW_optimizeVars_in_formula458);
                            optimizeVars();

                            state._fsp--;


                            }
                            break;

                    }


                    match(input,END,FOLLOW_END_in_formula461); 

                    }
                    break;

            }


            pushFollow(FOLLOW_aexpr_in_formula488);
            aexpr3=aexpr();

            state._fsp--;


             val = aexpr3; 

            }

        }

            catch (RecognitionException re) {
                //displayRecognitionError(re);
                reportError(re);
                //recover(input,re);
                //throw re;
            }

        finally {
        	// do for sure before leaving
        }
        return val;
    }
    // $ANTLR end "formula"



    // $ANTLR start "aexpr"
    // ALTL.g:193:1: aexpr returns [Expr val] : a= expr ( SEMI '[' t1= trigger ',' t2= trigger ']' (b1= bound )? OCCURS c1= expr | OCCURS '[' t3= trigger ',' t4= trigger ']' (b2= bound )? SEMI c2= expr )* ;
    public final Expr aexpr() throws RecognitionException {
        Expr val = null;


        Expr a =null;

        Expr t1 =null;

        Expr t2 =null;

        BoundExpr b1 =null;

        Expr c1 =null;

        Expr t3 =null;

        Expr t4 =null;

        BoundExpr b2 =null;

        Expr c2 =null;


         Stack<Expr> st = new Stack<Expr>();
                                                                      Stack<BoundExpr> stb = new Stack<BoundExpr>();
                                                                      Stack<Adaptive.Modality> stm = new Stack<Adaptive.Modality>(); 
        try {
            // ALTL.g:196:3: (a= expr ( SEMI '[' t1= trigger ',' t2= trigger ']' (b1= bound )? OCCURS c1= expr | OCCURS '[' t3= trigger ',' t4= trigger ']' (b2= bound )? SEMI c2= expr )* )
            // ALTL.g:196:3: a= expr ( SEMI '[' t1= trigger ',' t2= trigger ']' (b1= bound )? OCCURS c1= expr | OCCURS '[' t3= trigger ',' t4= trigger ']' (b2= bound )? SEMI c2= expr )*
            {
            pushFollow(FOLLOW_expr_in_aexpr559);
            a=expr();

            state._fsp--;


             st.push(a); 

            // ALTL.g:198:3: ( SEMI '[' t1= trigger ',' t2= trigger ']' (b1= bound )? OCCURS c1= expr | OCCURS '[' t3= trigger ',' t4= trigger ']' (b2= bound )? SEMI c2= expr )*
            loop10:
            do {
                int alt10=3;
                int LA10_0 = input.LA(1);

                if ( (LA10_0==SEMI) ) {
                    alt10=1;
                }
                else if ( (LA10_0==OCCURS) ) {
                    alt10=2;
                }


                switch (alt10) {
            	case 1 :
            	    // ALTL.g:198:7: SEMI '[' t1= trigger ',' t2= trigger ']' (b1= bound )? OCCURS c1= expr
            	    {
            	    match(input,SEMI,FOLLOW_SEMI_in_aexpr621); 

            	    match(input,LB,FOLLOW_LB_in_aexpr623); 

            	    pushFollow(FOLLOW_trigger_in_aexpr627);
            	    t1=trigger();

            	    state._fsp--;


            	    match(input,COMMA,FOLLOW_COMMA_in_aexpr629); 

            	    pushFollow(FOLLOW_trigger_in_aexpr633);
            	    t2=trigger();

            	    state._fsp--;


            	    match(input,RB,FOLLOW_RB_in_aexpr636); 

            	     stb.push(null); 

            	    // ALTL.g:199:7: (b1= bound )?
            	    int alt8=2;
            	    int LA8_0 = input.LA(1);

            	    if ( (LA8_0==LE) ) {
            	        alt8=1;
            	    }
            	    switch (alt8) {
            	        case 1 :
            	            // ALTL.g:199:9: b1= bound
            	            {
            	            pushFollow(FOLLOW_bound_in_aexpr664);
            	            b1=bound();

            	            state._fsp--;


            	             stb.pop();
            	                                                                          stb.push(b1); 

            	            }
            	            break;

            	    }


            	    match(input,OCCURS,FOLLOW_OCCURS_in_aexpr726); 

            	    pushFollow(FOLLOW_expr_in_aexpr730);
            	    c1=expr();

            	    state._fsp--;


            	     st.push(t1);
            	                                                                  st.push(t2);
            	                                                                  st.push(c1);
            	                                                                  stm.push(Adaptive.Modality.May); 

            	    }
            	    break;
            	case 2 :
            	    // ALTL.g:206:5: OCCURS '[' t3= trigger ',' t4= trigger ']' (b2= bound )? SEMI c2= expr
            	    {
            	    match(input,OCCURS,FOLLOW_OCCURS_in_aexpr777); 

            	    match(input,LB,FOLLOW_LB_in_aexpr779); 

            	    pushFollow(FOLLOW_trigger_in_aexpr783);
            	    t3=trigger();

            	    state._fsp--;


            	    match(input,COMMA,FOLLOW_COMMA_in_aexpr785); 

            	    pushFollow(FOLLOW_trigger_in_aexpr789);
            	    t4=trigger();

            	    state._fsp--;


            	    match(input,RB,FOLLOW_RB_in_aexpr792); 

            	     stb.push(null); 

            	    // ALTL.g:207:5: (b2= bound )?
            	    int alt9=2;
            	    int LA9_0 = input.LA(1);

            	    if ( (LA9_0==LE) ) {
            	        alt9=1;
            	    }
            	    switch (alt9) {
            	        case 1 :
            	            // ALTL.g:207:6: b2= bound
            	            {
            	            pushFollow(FOLLOW_bound_in_aexpr817);
            	            b2=bound();

            	            state._fsp--;


            	             stb.pop();
            	                                                                          stb.push(b2); 

            	            }
            	            break;

            	    }


            	    match(input,SEMI,FOLLOW_SEMI_in_aexpr878); 

            	    pushFollow(FOLLOW_expr_in_aexpr882);
            	    c2=expr();

            	    state._fsp--;


            	     st.push(t3);
            	                                                                  st.push(t4);
            	                                                                  st.push(c2);
            	                                                                  stm.push(Adaptive.Modality.Must); 

            	    }
            	    break;

            	default :
            	    break loop10;
                }
            } while (true);

